--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/malaotou/ECM#readme",
   "dependencies": {
+    "bower": "^1.7.9",
     "express": "^4.13.4",
     "nodemon": "^1.9.2"
   }
