--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
     "express": "^4.13.4",
+    "express-logger": "0.0.3",
     "jade": "^1.11.0",
     "nodemon": "^1.9.2",
-    "stylus": "^0.54.5",
-     "express-logger": "0.0.3",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "express-logger": "0.0.3",
     "logger": "0.0.1"
   }
 }
