--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
+    "cookie-parser": "^1.4.3",
+    "cookieparser": "^0.1.0",
     "express": "^4.13.4",
     "express-logger": "0.0.3",
     "jade": "^1.11.0",
+    "mongoose": "^4.4.19",
     "nodemon": "^1.9.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "session": "^0.1.0",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
