--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookieparser": "^0.1.0",
     "express": "^4.13.4",
     "express-logger": "0.0.3",
+    "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "mongoose": "^4.4.19",
     "nodemon": "^1.9.2",
