--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,19 @@
+
 {
   "name": "ecm",
-  "description": "enterprise content management",
-  "main": "index.js",
+  "version": "0.0.0",
   "authors": [
-    "ma lei"
+    "joeeames <joeeames@gmail.com>"
   ],
-  "license": "ISC",
-  "keywords": [
-    "ecm"
-  ],
-  "homepage": "https://github.com/malaotou/ECM",
+  "description": "\"Extreme Tech Training\"",
+  "license": "MIT",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "jquery": "~2.0.3",
+    "toastr": "~2.0.1",
+    "angular": "~1.2.0",
+    "angular-resource": "~1.2.0",
+    "angular-route": "~1.2.0",
+    "bootstrap": "~3.0.2"
   }
 }
